--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-azure-ad": "https://github.com/Cnordbo/react-native-azure-ad/",
-    "react-native-camera": "2.9.0",
+    "react-native-camera": "^3.42.0",
     "react-native-cli": "^2.0.1",
     "react-native-device-info": "^2.1.2",
     "react-native-exception-handler": "^2.7.1",
-    "react-native-file-viewer": "^1.0.14",
+    "react-native-file-viewer": "^2.1.4",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-global-font": "^1.0.1",
-    "react-native-image-picker": "^0.28.0",
+    "react-native-image-picker": "^3.1.4",
     "react-native-restart": "^0.0.10",
     "react-native-screens": "^2.2.0",
     "react-native-splash-screen": "^3.0.1",
