--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-azure-ad": "https://github.com/Cnordbo/react-native-azure-ad/",
-    "react-native-camera": "^2.9.0",
+    "react-native-camera": "2.11.1",
     "react-native-cli": "^2.0.1",
     "react-native-device-info": "^2.1.2",
     "react-native-exception-handler": "^2.7.1",
