--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
       tools:ignore="GoogleAppIndexingWarning"
       android:name=".MainApplication"
       android:label="@string/app_name"
+      android:usesCleartextTraffic="true"
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
