--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,9 @@ project.ext.react = [
     jsBundleDirRelease: "$buildDir/intermediates/merged_assets/release/out",
     enableHermes: false,  // clean and rebuild if changing
     hermesCommand: "../../node_modules/hermes-engine/%OS-BIN%/hermes",
+    bundleAssetName: "index.android.bundle",
+    bundleInDebug: true,
+    bundleInRelease: true
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
